--- a/styles.css
+++ b/styles.css
@@ -58,5 +58,5 @@
 	left:0px;
 	width:0px;
 	height:0px;
-	background-image: url(file:///C:/Users/USER/Desktop/BrowserCraft-master/Untitled.png);
+	background-color: blue;
 }
